--- a/src/styles/pages/plpPage.scss
+++ b/src/styles/pages/plpPage.scss
@@ -1,36 +1,7 @@
 @import "../global/tokens.scss";
 
-.plp {
-  &-container {
-    // border: solid 1px rgb(57, 53, 53);
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
-    // margin: 2%;
-    // gap: 1rem;
-
-    &--header {
-      // width: 100%;
-      // display: flex;
-      // background-color: aquamarine;
-      border: solid 1px;
-
-      h1 {
-        margin-left: 1%;
-      }
-    }
-    &--listView {
-      // width: 100%;
-      // display: flex;
-      // justify-content: center;
-      // flex-wrap: wrap;
-
-      // background-color: royalblue;
-      // gap: 1rem;
-      &__item {
-        // background-color: beige;
-        // border: solid 1px;
-      }
-    }
-  }
+// PLP Page
+#root > div > div.nextui-c-dfbgCO.nextui-c-dfbgCO-fGHEql-fluid-true.nextui-c-dfbgCO-ijSwbvN-css > a > img {
+  width: auto;
+  height: 140px;
 }
