feat: add readme and improvements code

--- a/src/styles/pages/plpPage.scss
+++ b/src/styles/pages/plpPage.scss
@@ -1,7 +1,6 @@
+a img {
 
-
-// PLP Page
-#root > div > div.nextui-c-dfbgCO.nextui-c-dfbgCO-fGHEql-fluid-true.nextui-c-dfbgCO-ijSwbvN-css > a > img {
-  width: auto;
-  height: 140px;
+  margin-top: 1rem;
+  -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px #222);
 }
