--- a/src/styles/components/detailproductcard.scss
+++ b/src/styles/components/detailproductcard.scss
@@ -4,3 +4,19 @@ a {
     text-decoration: none;
   }
 }
+
+#root
+  > div
+  > div.nextui-c-fdHeMm.nextui-c-fdHeMm-dwxLNB-responsive-true.nextui-c-fdHeMm-iizPHCF-css
+  > div
+  > div
+  > div
+  > div
+  > div.nextui-c-kRHeuF.nextui-c-kRHeuF-isiISG-css.nextui-grid-item.sm
+  > hr {
+  width: 90%;
+  height: 1px;
+  background-color: #ddc9c9;
+  border: none;
+  box-shadow: 0 20px 20px -20px #333;
+}
